Should fix jumping in admin (Firefox/Linux)

--- a/resources/default-theme/basic.css
+++ b/resources/default-theme/basic.css
@@ -63,6 +63,7 @@ div#main {
 
 ul.listMenu {
         list-style-type: none;
+        white-space: nowrap; 
 }
 
 ul.listMenu li {
